add Print Phrase Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     //Confirm Phrase Screen
     <string name="tuto_confirm_phrase">Select the 9th word of your recovery phrase</string>
 
+    //Print Phrase Screen
+    <string name="tuto_connect_print">Please connect to printer before print</string>
 
 </resources>
