--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="strButton_Restore">Restore Wallet</string>
     <string name="strButton_Next">Next</string>
     <string name="strButton_Print_Phrase">Print The Phrase</string>
+    <string name="strButton_Sell">Sell</string>
+    <string name="strButton_Back">Back</string>
+    <string name="strButton_Done">Done</string>
 
     //Create New Screen
     <string name="user_name">Email</string>
@@ -45,5 +48,8 @@
     <string name="label_validate_step_1">step 1</string>
     <string name="label_validate_step_2">step 2</string>
     <string name="label_validate_step_3">step 3</string>
+
+    <string name="label_is_validated">Item is validated</string>
+    <string name="label_is_not_validated">Item is not validated</string>
 
 </resources>
