--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="strButton_Back">Back</string>
     <string name="strButton_Done">Done</string>
     <string name="strButton_GoToHome">Go To Home</string>
+    <string name="strButton_GoToValidate">Validate Sneaker</string>
 
     //Create New Screen
     <string name="user_name">Email</string>
