--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string name="copyright">2019 - @copyright</string>
 
-    <string name="strButton_CreateNew">Create New Wallet</string>
+    <string name="strButton_CreateNew">Create Account</string>
     <string name="strButton_Import">Import</string>
     <string name="strButton_Next">Next</string>
     <string name="strButton_Print_Phrase">Print The Phrase</string>
