--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,11 +60,25 @@
     <string name="label_is_not_validated">Item is not validated</string>
 
     <string name="label_create_account">Create account</string>
+    <string name="label_log_in">Log in to Grails</string>
+
     <string name="text_holder_user_name">Your name</string>
     <string name="text_holder_user_email">Your email</string>
     <string name="text_holder_user_password">Your password</string>
+    <string name="text_holder_private_key">Paste your private key</string>
+
     <string name="label_button_register">Register</string>
+    <string name="label_button_login">Login</string>
+    <string name="label_button_next">Next</string>
+
+    <string name="text_question_login_1">What is private key?</string>
+    <string name="text_question_login_2">How to find out private key?</string>
+    <string name="text_question_login_3">What should I do?</string>
 
     <string name="text_message_input_valid_email">Please enter a valid email address</string>
+    <string name="text_message_incorrect_key">Private key is not correct.\nPlease try again later!</string>
+    <string name="text_message_incorrect_password">Your password is incorrect.\nPlease try again!</string>
+    <string name="text_message_confirm_email_login_1">Are you logging in account has email</string>
+    <string name="text_message_confirm_email_login_2">Please input your password to continue.</string>
 
 </resources>
