--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,13 +84,23 @@
     <string name="text_question_login_2">How to find out private key?</string>
     <string name="text_question_login_3">What should I do?</string>
 
-    <string name="text_explore_1">Do you want to\nknow everything about\nyour <font color="#ff773f"><b>GRAILS?</b></font></string>
-    <string name="text_explore_2">Do you want to\nmake sure your <font color="#ff773f"><b>GRAILS</b></font>\nsafety?</string>
+    <string name="text_explore_1">Do you want to\nknow everything about\nyour
+        <font color="#ff773f">
+            <b>GRAILS?</b>
+        </font>
+    </string>
+    <string name="text_explore_2">Do you want to\nmake sure your
+        <font color="#ff773f">
+            <b>GRAILS</b>
+        </font>
+        \nsafety?
+    </string>
 
     <string name="text_message_input_valid_email">Please enter a valid email address</string>
     <string name="text_message_incorrect_key">Private key is not correct.\nPlease try again later!</string>
     <string name="text_message_incorrect_password">Your password is incorrect.\nPlease try again!</string>
     <string name="text_message_confirm_email_login_1">Are you logging in account has email</string>
     <string name="text_message_confirm_email_login_2">Please input your password to continue.</string>
+    <string name="text_private_key">Private key</string>
 
 </resources>
