--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,5 +143,7 @@
     <string name="label_button_sell">Sale item</string>
     <string name="label_button_stolen">Stolen</string>
     <string name="label_button_found">Found it</string>
+    <string name="label_button_scan_now">Scan now</string>
+    <string name="text_item_was_stolen">(Was stolen)</string>
 
 </resources>
